# ecommerce-engine

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  architecture.md  docker-compose.yml  project_requirement.md  project_structure.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0fa82966333a_describe_change.py  92d2ee9b4bf0_add_failed_login_fields.py  9533fb895671_create_otp_table.py  a74a55d59845_initial_schema_for_testing.py  b2f7c4d8e901_add_product_images.py  f40a52df7937_add_user_user_details_user_loyalty_and_.py
backend/app/: main.py
backend/app/auth/: dependencies.py  exceptions.py  models.py  otp_service.py  repository.py  router.py  schemas.py  security.py  service.py  tasks.py
backend/app/categories/: cache.py  dfs.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/common/: enums.py  pagination.py  responses.py  utils.py  validators.py
backend/app/core/: celery.py  config.py  constants.py  database.py  dependencies.py  email.py  exceptions.py  logging.py  operations_service.py  reference_models.py  reference_repository.py  reference_service.py  security.py
backend/app/orders/: algorithms.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/payments/: bkash_strategy.py  exceptions.py  factory.py  models.py  repository.py  router.py  schemas.py  service.py  strategy.py  (+2 more)
backend/cli/: __init__.py  dependencies.py  manage.py  output.py  prompts.py
backend/docker/: api-entrypoint.sh  healthcheck.py  migrate-entrypoint.sh  worker-entrypoint.sh
backend/docs/: backend_project_structure.md  cli_specification.md  fix_this_issues.md  maintenance.md  project_structure.md
(+25 files in other folders)
