[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.4.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "httpx>=0.28.1",
    "orjson>=3.11.9",
    "passlib[bcrypt]>=1.7.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=6.4.0",
    "rich>=13.9.0",
    "sqlalchemy>=2.0,<3.0",
    "stripe>=14.4.0",
    "structlog>=26.1.0",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "coverage>=7.15.1",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
]
